--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,4 +2,4 @@
 nixPkgs = ["python3", "nodejs"]
 
 [phases.build]
-cmds = ["cd frontend && npm install && npm run build && mv dist ../static && cd .. && pip install -r requirements.txt"]
+cmds = ["cd frontend && npm install && npm run build && cp -r dist/* ../static/ && cd .. && pip install -r requirements.txt"]
